# CEN-ISO-IEEE-11073-Health-Informatics-SourceCode

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/Agent/: Agent.cpp  Agent.h  CMakeLists.txt  main.cpp
src/CommunicationProtocol/: CMakeLists.txt
src/CommunicationProtocol/Bluetooth/: CMakeLists.txt
src/CommunicationProtocol/IrDA/: CMakeLists.txt
src/CommunicationProtocol/NFC/: CMakeLists.txt
src/CommunicationProtocol/Serial/: CMakeLists.txt
src/CommunicationProtocol/USB/: CMakeLists.txt
src/CommunicationProtocol/WiFi/: CMakeLists.txt  main.cpp
src/CommunicationProtocol/ZigBee/: CMakeLists.txt
src/DeviceSpecilizations/: CMakeLists.txt
src/Manager/: CMakeLists.txt  main.cpp
src/OptimizedExchnageProtocol/IEEE-11073-20601-Application-profile-Optimized-exchange-protocol/: CMakeLists.txt
