add_subdirectory(IEEE-11073-10404-Pulse-Oximeter)
add_subdirectory(IEEE-11073-10407-Blood-Pressure-Monitor)
add_subdirectory(IEEE-11073-10408-Thermometer)
add_subdirectory(IEEE-11073-10415-Weighing-Scale)
add_subdirectory(IEEE-11073-10417-Glucose-Meter)
add_subdirectory(IEEE-11073-10420-Body-composition-analyzer)
add_subdirectory(IEEE-11073-10421-Peak-flow)
add_subdirectory(IEEE-11073-10441-Cardiovascular-fitness-and-activity-monitor)
add_subdirectory(IEEE-11073-10442-Strength-fitness-equipment)
add_subdirectory(IEEE-11073-10471-Independent-living-activity-hub)
add_subdirectory(IEEE-11073-10472-Medication-monitor)
add_subdirectory(IEEE-11073-20601-Generic-DataTypes)
add_subdirectory(IEEE-P11073-10406-Basic-ECG)
add_subdirectory(IEEE-P11073-10413-Respiration-rate-monitor)
add_subdirectory(IEEE-P11073-10418-INR-blood-coagulation)
add_subdirectory(IEEE-P11073-10419-Insulin-pump)



